--- a/Bypass/wwwroot/archive.html
+++ b/Bypass/wwwroot/archive.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8">
     <title></title>
     <link href="./bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="./bootstrap/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
